<resources>
    <string name="app_name">SB_GOT_MVP</string>
    <string name="house_name_second">LANNISTERS</string>
    <string name="house_name_first">STARKS</string>
    <string name="house_name_third">TARGARYENS</string>
    <string name="hint_search">Поиск</string>
    <string name="app_coder">Герасимов Виталий</string>
    <string name="text_email">gervit2008@mail.ru</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="house_words">Words</string>
    <string name="born">Born</string>
    <string name="titles">Titles</string>
    <string name="aliases">Aliases</string>
    <string name="label_father">Father</string>
    <string name="label_mother">Mother</string>
    <string name="name">name</string>
    <string name="other_house_name">other_home</string>
</resources>
